--- a/examples/cra-dapp/src/App.css
+++ b/examples/cra-dapp/src/App.css
@@ -49,7 +49,7 @@ button:active {
 .accountActions {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
