--- a/examples/cra-dapp/src/App.css
+++ b/examples/cra-dapp/src/App.css
@@ -3,12 +3,16 @@ body {
   padding: 0;
 }
 
+body * {
+  box-sizing: border-box;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px;
   padding-top: 50px;
-  box-sizing: border-box;
   width: 100vw;
   min-height: 100vh;
   text-align: center;
@@ -31,6 +35,11 @@ button {
 
 button:active {
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
+}
+
+button:disabled {
+  opacity: 0.3;
+  cursor: default;
 }
 
 .Actions {
@@ -59,6 +68,7 @@ button:active {
   gap: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+  max-width: 100vw;
 }
 
 .Info {
@@ -67,4 +77,48 @@ button:active {
 
 .Counter {
  padding-top: 20px;
+}
+
+.AccountColumns > span {
+  margin-left: 8px;
+}
+
+.AccountItem::after {
+  content: '';
+  display: block;
+  width: 70%;
+  height: 10px;
+  margin: 0 auto;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+@media only screen and (max-width: 600px) {
+  .accountActions {
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .Info {
+    padding: 20px 30px;
+  }
+
+  .Accounts,
+  .BottomInfo {
+    width: 100vw;
+    padding-left: 20px;
+    padding-right: 20px;
+    overflow-x: hidden;
+    word-break: break-word;
+  }
+
+  .AccountColumns {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .AccountColumns > span {
+    margin-left: 0px;
+    margin-top: 8px;
+  }
 }
