--- a/examples/cra-dapp/src/App.css
+++ b/examples/cra-dapp/src/App.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
 }
@@ -21,9 +21,9 @@ body * {
 .App[data-theme='dark'] {
   background-color: #282c34;
   color: white;
-}
+} */
 
-button {
+/* button {
   all: unset;
   border: 1px solid black;
   padding: 10px 20px;
@@ -31,7 +31,7 @@ button {
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
   transition: box-shadow 0.2s ease-in-out;
   cursor: pointer;
-}
+} */
 
 button:active {
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
