--- a/examples/cra-dapp/src/index.css
+++ b/examples/cra-dapp/src/index.css
@@ -21,4 +21,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply text-gray-900 dark:text-gray-50;
+}
+
+.btn {
+  @apply rounded-sm px-4 py-2 font-semibold transition-all duration-200;
+}
+
+.btn-primary {
+  @apply bg-emerald-400 text-white hover:bg-emerald-500;
 }
