--- a/examples/cra-dapp/src/index.css
+++ b/examples/cra-dapp/src/index.css
@@ -31,10 +31,10 @@ body {
   @apply border border-green-400/10 bg-green-900/50 text-green-400 hover:border-green-400/20 hover:bg-green-900/60;
 }
 
-.btn-secondary {
-  @apply border border-zinc-400/20 bg-zinc-950 text-zinc-400 hover:border-zinc-400/25;
+.btn-primary:disabled {
+  @apply cursor-not-allowed border border-zinc-400/25 bg-zinc-950 text-zinc-400;
 }
 
-.btn-primary:disabled {
-  @apply cursor-not-allowed border-indigo-400/10 bg-indigo-950 text-indigo-400;
+.btn-secondary {
+  @apply border border-indigo-400/10 bg-indigo-950 text-indigo-400 hover:border-indigo-400/25;
 }
