--- a/examples/cra-dapp/src/index.css
+++ b/examples/cra-dapp/src/index.css
@@ -21,10 +21,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply bg-black;
 }
 
 .btn {
-  @apply rounded-md px-6 py-2.5 font-mono text-sm font-medium transition-all duration-200;
+  @apply rounded-md px-3 py-1.5 font-mono text-sm font-medium transition-all duration-200 md:px-6 md:py-2.5;
 }
 
 .btn-primary {
