--- a/examples/cra-dapp/src/index.css
+++ b/examples/cra-dapp/src/index.css
@@ -2,26 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import './fonts/index.css';
+
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap'); */
 
 body {
-  margin: 0;
-  font-family:
-    'Inter',
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    -apple-system,
-    BlinkMacSystemFont,
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  @apply bg-black;
+  @apply m-0 bg-black;
 }
 
 .btn {
