--- a/examples/cra-dapp/src/index.css
+++ b/examples/cra-dapp/src/index.css
@@ -29,7 +29,7 @@ body {
   @apply border border-indigo-400/10 bg-indigo-950 text-indigo-400 hover:border-indigo-400/25;
 }
 
-/*  dark:bg-gradient-to-t dark:from-zinc-950 dark:to-zinc-900 */
+/* Grain */
 
 /* zinc-800 #27272a */
 /* zinc-700 #3f3f46 */
